# derp

./: AshitaManager.cs  CMakeLists.txt  MainWindow.xaml.cs  README.md  custom_weapon_values.yml  custom_weapons.yml  dat_probe.py  extend_item_dat.py  map_weapons.py  novelty_armor_upgrades.yml  novelty_level1_candidates.yml  novelty_weapon_upgrades.yml  remap_reference.txt  replace_items.yml  scan_item_dats.py  target_16427.yml  target_17113.yml  target_17377.yml  target_17378.yml  target_18343.yml  target_18511.yml  target_18871.yml  target_18873.yml  target_18875.yml  target_18877.yml  test-item  test-items  unused_item_ids.txt  weapon_swap.yml  xi_tinkerer.py
cmake/: Cache.cmake  ClangTidy.cmake  FindMariaDBCPP.cmake  StandardProjectSettings.cmake
documentation/: AI_Events.txt  Auction Categories.txt  MusicIDs.txt  ZoneIDs.txt  battlefield_ids.txt  entity_update_flags.txt  features_bitmask.txt  known_monsters_animations.txt  model_ids.txt  mods_by_id.txt  monster_tp_moves.txt  songdata.txt
ext/: CMakeLists.txt
modules/: init.txt  module_utils.lua
settings/: dynamic_world.lua  logging.lua  login.lua  main.lua  map.lua  network.lua
sql/: abilities.sql  abilities_charges.sql  accounts_sessions.sql  audit_bazaar.sql  audit_dbox.sql  audit_gm.sql  audit_trade.sql  audit_vendor.sql  blue_spell_mods.sql  char_effects.sql  char_flags.sql  char_points.sql  custom_items.sql  custom_items.sql.bak  custom_items.sql.bak2  custom_items.sql.bak5  guild_item_points.sql  guild_shops.sql  instance_entities.sql  instance_list.sql  item_basic.sql  item_latents.sql  item_mods.sql  item_mods_pet.sql  item_usable.sql  job_point_gifts.sql  mob_droplist.sql  mob_groups.sql  mob_pools.sql  mob_resistances.sql  mob_skill_lists.sql  mob_skills.sql  mob_spell_lists.sql  named_rare_items.sql  nm_spawn_points.sql  sim_players.sql  spell_list.sql  traits.sql  (+2 more)
src/world/: CMakeLists.txt  besieged_system.h  campaign_system.h  colonization_system.h  conquest_system.cpp  daily_tally.cpp  http_server.cpp  http_server.h  ipc_server.cpp  ipc_server.h  main.cpp  party_system.h  time_server.cpp  time_server.h  world_server.cpp  world_server.h  zone_settings.h
test/: CMakeLists.txt  lua_sim_client.cpp  lua_sim_client.h  lua_simulation.cpp  lua_simulation.h  memory_sink.cpp  memory_sink.h  test_char.cpp  test_char.h  test_runner.cpp
test/reporting/: report.h
test/scripts/: assertions.lua  packet_builder.lua  simulation_client.lua  simulation_world.lua  test_wrapper.lua
test/scripts/definitions/: TestSuite.lua
test/scripts/tests/: bcnm.lua  bst.lua  claim.lua  cop_missions.lua  deepsleep.lua  drops.lua  dynamis.lua  elements.lua  latents.lua  mob_spawning.lua  quest_interaction.lua  smn.lua  time.lua  zm_missions.lua  znm.lua
(+3710 files in other folders)
